Add GETTING_STARTED.md and REACTION.md, update README.md with Level 1/2/3 concept, improve documentation structure